// 认证模块的定义

syntax="proto3";

package auth;

option go_package="bytedancemall/auto/proto;auth";

service AuthService {
    rpc DeliverTokenByRPC(DeliverTokenReq) returns (DeliveryTokenResp) {}
    rpc VerifyTokenByRPC(VerifyTokenReq) returns (VerifyTokenResp) {}
    rpc ProlongTokenByRPC(ProlongTokenReq) returns (ProlongTokenResp) {}
}

message DeliverTokenReq {
    uint64 user_id = 1;
    string device_id = 2; 
}

message DeliveryTokenResp {
    string token = 1;
    bool result = 2;
}

message VerifyTokenReq {
    string token = 1;
}

message VerifyTokenResp {
    bool result = 1;
    uint64 user_id = 2;
}

message ProlongTokenReq {
    uint64 user_id = 1;
    string device_id = 2;
}

message ProlongTokenResp {
    string token = 1;
    bool result = 2;
}